# Opac

./: .gitignore  CMakeLists.txt  DIPROGLANG_OPAC.sln  DIPROGLANG_OPAC.vcxproj  DIPROGLANG_OPAC.vcxproj.filters  README.md  generate_sln.bat  opac_log.txt  premake5.lua  test.cpp
DIPROGLANG_OPAC/x64/Release/: DIPROGLANG_OPAC.iobj  DIPROGLANG_OPAC.ipdb
DIPROGLANG_OPAC/x64/Release/DIPROGLANG_OPAC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog
OPAC/: main.cpp
OPAC/core/: system.cpp  system.h
OPAC/db/: database.cpp  database.h
OPAC/models/: Account.h  Book.cpp
enc_temp_folder/4b53b7dbee9e7f7cf7bdc85e52e0bd1c/: .gitignore
src/: main.cpp
src/core/: system.cpp  system.h
src/db/: database.cpp  database.h  opac_db.sql
src/managers/auth/: auth.cpp  auth.h
src/managers/books/: BookManager.cpp  BookManager.h
src/managers/borrow/: BorrowManager.cpp  BorrowManager.h
src/managers/fee/: FeeCalculator.cpp  FeeCalculator.h
src/models/: Account.h  Book.cpp  Book.h  BorrowRecord.cpp  BorrowRecord.h
src/ui/: admin_widget.cpp  admin_widget.h  borrow_dialog.cpp  borrow_dialog.h  login_widget.cpp  login_widget.h  main_window.cpp  main_window.h  menu.cpp  menu.h  opac_style.h  return_dialog.cpp  return_dialog.h  user_widget.cpp  user_widget.h
src/utils/: EventBus.cpp  EventBus.h  Logger.cpp  Logger.h  env.hpp
